approval component, profile component added

--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -57,7 +57,7 @@
             <ul nz-menu class="list">
               <li
                 nz-menu-item
-                class="d-flex flex-row justify-content-between item"
+                class="d-flex flex-row justify-content-between item" routerLink="modules/profile"
               >
                 <div>
                   <span
