--- a/Frontend/src/app/layouts/user/forgot-password/forgot-password.component.css
+++ b/Frontend/src/app/layouts/user/forgot-password/forgot-password.component.css
@@ -34,4 +34,12 @@
     float: right;
   }
   
-
+  nz-form-label::after{
+    display: inline-block;
+    margin-left: -7px;
+    color: #ff4d4f;
+    font-size: 14px;
+    font-family: SimSun,sans-serif;
+    line-height: 1;
+    content: '*';
+}
