--- a/Frontend/src/app/layouts/user/register/register.component.css
+++ b/Frontend/src/app/layouts/user/register/register.component.css
@@ -60,3 +60,12 @@ nz-form-label{
 .address{
     width:460px;
 }
+nz-form-label::after{
+  display: inline-block;
+  margin-left: -7px;
+  color: #ff4d4f;
+  font-size: 14px;
+  font-family: SimSun,sans-serif;
+  line-height: 1;
+  content: '*';
+}
