--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -7,10 +7,7 @@
     nzTheme="light"
   >
     <div class="logo">
-      <img
-        src="https://www.siggraph.org/wp-content/uploads/2022/04/org.flat_.logo_.400_0.jpg"
-        class="img"
-      />
+      AMS
     </div>
 
     <ul nz-menu nzMode="inline" class="sider-menu">
