--- a/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
+++ b/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
@@ -1,1 +1,141 @@
-<p>tender-details works!</p>
+<nz-header> Tender Details</nz-header>
+<nz-content>
+  <button nz-button nzType="primary" (click)="open()" class="mb-1">
+    Create
+  </button>
+  <nz-table
+    #basicTable
+    [nzData]="listOfData"
+    nzShowPagination
+    nzShowSizeChanger
+    [nzPageSizeOptions]="[5, 10, 15, 20]"
+  >
+    <thead>
+      <tr>
+        <th>Dept ID</th>
+        <th>Dept Name</th>
+        <th>Ranking</th>
+        <th>Status</th>
+        <th>Created Date</th>
+        <th>Created By</th>
+        <th>Update Date</th>
+        <th>Update By</th>
+        <th>Dept Code</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of basicTable.data">
+        <td>{{ data.department_id }}</td>
+        <td>{{ data.department_name }}</td>
+        <td>{{ data.ranking }}</td>
+        <td>{{ data.status }}</td>
+        <td>{{ data.created_date }}</td>
+        <td>{{ data.created_by }}</td>
+        <td>{{ data.updated_date }}</td>
+        <td>{{ data.updated_by }}</td>
+        <td>{{ data.department_code }}</td>
+        <td>
+          <button nz-button nzType="primary" (click)="edit(data)">Edit</button>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
+</nz-content>
+<nz-drawer
+  [nzBodyStyle]="{ overflow: 'auto' }"
+  [nzMaskClosable]="false"
+  [nzWidth]="720"
+  [nzVisible]="visible"
+  [nzTitle]="drawerTitle"
+  [nzFooter]="footerTpl"
+  (nzOnClose)="close()"
+>
+  <form nz-form *nzDrawerContent [formGroup]="departmentform">
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Dept ID</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="department_id"
+            placeholder="please enter Department ID"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Department Name</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="department_name"
+            type="text"
+            nz-input
+            placeholder="please enter Department Name"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Ranking</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="ranking"
+            type="number"
+            nz-input
+            placeholder="please enter Rank"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Status</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="status"
+            type="text"
+            nz-input
+            placeholder="please enter Status"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Department Code</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="department_code"
+            type="text"
+            nz-input
+            placeholder="please enter Department code"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+  </form>
+
+  <ng-template #footerTpl>
+    <div style="float: right">
+      <button nz-button style="margin-right: 8px" (click)="close()">
+        Cancel
+      </button>
+      <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
+        Submit
+      </button>
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="update()">
+        Update
+      </button>
+    </div>
+  </ng-template>
+</nz-drawer>
