--- a/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.html
+++ b/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.html
@@ -1,4 +1,4 @@
-<nz-header> Expenditure</nz-header>
+<nz-header>User Accounts</nz-header>
 <nz-content>
   <button nz-button nzType="primary" (click)="open()" class="mb-1">
     Create
