--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -51,7 +51,7 @@
   [nzFooter]="footerTpl"
   (nzOnClose)="close()"
 >
-  <form nz-form *nzDrawerContent [formGroup]="departmentform">
+  <form nz-form *nzDrawerContent [formGroup]="departmentForm">
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Dept ID</nz-form-label>
