Login and App module changes done
Login and App module changes done

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,3 +1,2 @@
-<!-- <app-home-page></app-home-page> -->
 <router-outlet></router-outlet>
-<!-- <ngx-ui-loader></ngx-ui-loader> -->
+<ngx-ui-loader></ngx-ui-loader>
