department list table modified

--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -126,7 +126,7 @@
     <nz-layout class="inner-layout">
       <!-- <nz-header class="inner-header"> Approvals</nz-header> -->
       <router-outlet></router-outlet>
-      <nz-footer class="text-center"> sunshine @ 2022 </nz-footer>
+      <!-- <nz-footer class="text-center"> sunshine @ 2022 </nz-footer> -->
     </nz-layout>
   </nz-layout>
 </nz-layout>
