--- a/Frontend/src/app/layouts/home/home.component.css
+++ b/Frontend/src/app/layouts/home/home.component.css
@@ -10,7 +10,7 @@
 }
 
 .inner-layout {
-  padding: 0px 24px;
+  padding: 0px 12px;
 
 }
 
@@ -48,12 +48,12 @@ nz-header {
   font-size:20px;
 }
 .layout {
-  min-height: 100vh;
+  min-height: auto;
 }
 
 nz-sider {
 
-  height: 100vh;
+  height: auto;
   position: sticky;
   left: 0;
   top: 0;
