--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.css
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.css
@@ -1,18 +1,21 @@
 nz-content {
   background: #fff;
   padding: 24px;
-  height: 70vh;
+  height: auto;
 }
 nz-header {
   background: none;
   font-size: large;
   font-weight: 500;
 }
-
+nz-breadcrumb {
+padding-top: 10px;
+padding-bottom: 10px;
+}
 nz-form-label {
   text-align: left;
 }
-nz-table {
+/* nz-table {
 overflow-y: auto;
 height: 55vh;
 }
@@ -20,5 +23,19 @@ height: 55vh;
 nz-table thead tr{
 position: sticky;
 top: 100;
+} */
+
+.editbtn{
+  /* border: 1px solid gray; */
+  width: fit-content;
 }
 
+.editbtn a:hover{
+  color: #1890ff;
+  text-decoration: underline;
+}
+.cbutton{
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
